--- a/tecnoshop-web-app/package.json
+++ b/tecnoshop-web-app/package.json
@@ -27,8 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server --watch --p 3004 db.json"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +49,6 @@
   },
   "devDependencies": {
     "json-server": "^0.17.0"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
