conectar back y front

--- a/back/config/config.env
+++ b/back/config/config.env
@@ -2,7 +2,7 @@ PORT=4000
 NODE_ENV=DEVELOPMENT
 
 DB_LOCAL_URI = mongodb://localhost:27017/tecnoshop
-DB_URI=mongodb+srv://udea:Misiontic2022@vetyshop.ec1s1hz.mongodb.net/tecnoshop
+DB_URI=mongodb+srv://tecnoshop:tecnoshop1.@tecnoshop.sggtkih.mongodb.net/tecnoshop
 JWT_SECRET=IKBGLKNROGIAY8R4Y3IUG8IGIBHO7YHIH
 JWT_TIEMPO_EXPIRACION= 1d
 COOKIE_EXPIRES_TIME= 1
