--- a/tecnoshop-web-app/package.json
+++ b/tecnoshop-web-app/package.json
@@ -7,7 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "bootstrap": "^5.2.2",
+    "cloudinary": "^1.32.0",
+    "cookie-parser": "^1.4.6",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
