--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node back/server.js",
     "dev": "export NODE_ENV=DEVELOPMENT && nodemon back/server",
     "prod": "export NODE_ENV=PRODUCTION && nodemon back/server",
-    "vercel-postbuild":"NPM_CONFIG_PRODUCTION=false && NODE_OPTIONS=--openssl-legacy-provider && npm install --force --prefix tecnoshop-web-app && npm run build --prefix tecnoshop-web-app"
+    "build":"NPM_CONFIG_PRODUCTION=false && NODE_OPTIONS=--openssl-legacy-provider && npm install --force --prefix tecnoshop-web-app && npm run build --prefix tecnoshop-web-app"
   },
   "repository": {
     "type": "git",
